--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,9 @@
-<div class="row" style="margin-top: 5% ">
-	<div class="col-md-12" align="center">
-		<h1>Contact Us</h1>
-	</div>
+<div class="row" align="center">
+    <div class="col-md-12" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/contactgold.png" style="width: 300px; height: 300px" >
+    </div>
 </div>
+
 <p><strong>Email:</strong> Theblackwomanisgodstores@gmail.com</p>
 <p><strong>Address:</strong> 340 S LEMON AVE #2792 WALNUT, CA 91789</p>
 
