--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,26 +30,33 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
+  background-color: black;
+  color: white;
 }
 
 .toplogo{
-  height: 5%;
-  width: 5%; 
+  height: 150px;
+  width: 180px; 
 }
 
 a:hover { 
-    background-color: lavender;
+  background-color: lavender;
 }
 
 #pro_business{
   background-color: rgba(80, 14, 107, 0.9);
 }
 
-#thumbnail_p{
+.thumbnail{
 
-  width: 100%;
- 
-
+  background-color: #D4AF37;
+  border-color: black;
+  border-width: 7px;
+  padding-top: 40%;
+  opacity: 0.55;
+}
+.thumbnail:hover{
+  opacity: 0.8;
 }
 
 #t_backdrop{
@@ -62,35 +69,71 @@ a:hover {
 }
 
 #prod_row{
-  background-color: rgba(80, 14, 107, 0.9);
+  background-image: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/bacground1440.png");
   margin-top: 5%;
   border-radius: 10px;
 
 }
 
 #pic_row{
-  margin-top: 3%;
+  margin-top: 0%;
 }
 
 #review_dis{
-  background-color: lavender;
+  background-color: #D4AF37;
   padding: 10px;
   margin-top: 1.5%;
   margin-left: 2%;
 }
 
 #review_row{
-  background-color: lavender;
+  background-color: #D4AF37;
   padding: 10px;
   margin-top: 5%;
   border-radius: 10px;
 }
 
 .navbar {
-  background-color: white;
+  background-color: black;
+  width: 100%;
   color: black;
   border: none;
-  margin-top: 1%;
+  margin-top: 0%;
+}
+
+.navaboutpic{
+  width: 100px;
+  height: 100px;
+}
+
+.navsigninpic{
+    width: 100px;
+  height: 100px;
+}
+
+.navsignuppic{
+      width: 100px;
+  height: 100px;
+}
+
+.navcontactpic{
+  width: 100px;
+  height: 100px;
+}
+
+.navhomepic{
+  width: 100px;
+  height: 100px;
+}
+
+.navbizpic{
+  width: 100px;
+  height: 100px;
+}
+
+.navstorepic{
+  width: 100px;
+  height: 100px;
 }
 
 #nav_ops{
@@ -108,7 +151,7 @@ a:hover {
 }
 
 #signup{
-  background-color: lavender;
+  background-color: #D4AF37;
   border-radius: 25px;
   padding-left: 40px;
   margin-left: 50px;
@@ -119,10 +162,11 @@ a:hover {
   background-opacity: 0.35;
   z-index: -100;
   width: 500px;
+  color: black;
 }
 
 #login{
-  background-color: lavender;
+  background-color: #D4AF37;
   border-radius: 25px;
   padding-left: 40px;
   margin-left: 50px;
@@ -132,10 +176,11 @@ a:hover {
   background-opacity: 0.35;
   z-index: -100;
   width: 500px;
+  color: black
 }
 
 #edit{
-  background-color: lavender;
+  background-color: #D4AF37;
   border-radius: 25px;
   padding-left: 40px;
   margin-left: 50px;
@@ -143,17 +188,7 @@ a:hover {
   padding: 30px;
   background-opacity: 0.35;
   z-index: -100;
-}
-
-.jumbotron{
-    background: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png") no-repeat center center; 
-    -webkit-background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
-    -o-background-size: 100% 100%;
-    background-size: 70% 100%;
-    height: 380px;
-    width: 100%
-
+  color: black
 }
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
