--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,31 +14,58 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
     <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
+    <style>
+      /* width */
+      ::-webkit-scrollbar {
+          width: 10px;
+      }
+
+      /* Track */
+      ::-webkit-scrollbar-track {
+          box-shadow: inset 0 0 5px lightgrey; 
+          border-radius: 10px;
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+          background: darkgrey; 
+          border-radius: 10px;
+      }
+
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+          background: #D4AF37; 
+      }
+    </style>
 
      
   </head>
 
   <body>
-    <div class="row align-items-center">
+   <div class="row justify-content-center" align="center" style=" margin-left: -7.2%; margin-top: 0%; margin-bottom: 0%;">
+   
+          <div class="footer-social-icons">
 
-      <div class="col-md-12 center" align="center">
-        <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/image.png", :class => 'toplogo'), root_path %>
-      </div>
-      <div class="col-md-12 center" align="center" style="margin-top: 1%">
-        <div class="footer-social-icons">
-            <ul class="social-icons">
-                <li><a href="https://www.facebook.com/PharaohAllah/" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/Pharaoh_Allah" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com/pharaoh_aten/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-            </ul>
-        </div>
-      </div>
+              <ul class="social-icons">
+
+                  <li><a href="https://www.facebook.com/PharaohAllah/" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+
+                  <li><a href="https://twitter.com/Pharaoh_Allah" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+
+                  <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+
+                  <li><a href="https://www.instagram.com/pharaoh_aten/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+
+              </ul>
+
+          </div>
+
+    </div>
+    <%= render 'partials/navbar' %>
+
 
       
-    </div>
-    
-  	<%= render 'partials/navbar' %>
+
 
     <% flash.each do |name, msg| %>
       <% if msg.is_a?(String) %>
