--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
-<div class="row" style="margin-top: 5% ">
-	<div class="col-md-12" align="center">
-		<h1>About Us</h1>
-	</div>
+<div class="row" align="center">
+    <div class="col-md-12" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/aboutusgold.png" style="width: 300px; height: 300px" >
+    </div>
 </div>
 
 
