--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,112 +1,55 @@
-<div class="row" id="pic_row">
-  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 60%">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
- <!--    <li data-target="#myCarousel" data-slide-to="0" class="active"></li> -->
-<!--     <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li> -->
-  </ol>
-
-
-  <div class="carousel-inner">
-    <div class="item active" align="center">
-      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-<!--   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
-<script type="text/javascript">
-  $(document).ready(function(){
-      // Activate Carousel
-      $("#myCarousel").carousel({interval: 0});
-      
-      // Enable Carousel Indicators
-      $(".item1").click(function(){
-          $("#myCarousel").carousel(0);
-      });
-      $(".item2").click(function(){
-          $("#myCarousel").carousel(1);
-      });
-      $(".item3").click(function(){
-          $("#myCarousel").carousel(2);
-      });
-      $(".item4").click(function(){
-          $("#myCarousel").carousel(3);
-      });
-      
-      // Enable Carousel Controls
-      $(".left").click(function(){
-          $("#myCarousel").carousel("prev");
-      });
-      $(".right").click(function(){
-          $("#myCarousel").carousel("next");
-      });
-  });
-</script>
-
-
-</div>
-  
-
-<div class="row" style="margin-top: 3%;">
-      <div class="form-group">
-          <%= render 'search_form' %>
-      </div>
-</div>
 
 
 
-<div class="row" style="margin-top: 2%">
+
+
+<!-- <div class="row" style="margin-top: 2%">
     <div class="col-sm-6" style="margin-top: 1%">
-        <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Promote+Your+BusinessToday.png", :class => 'promo_a'), new_business_path, target: "_blank" %>
+        <#= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Promote+Your+BusinessToday.png", :class => 'promo_a'), new_business_path, target: "_blank" %>
     </div>
     <div class="col-sm-6 " style="margin-top: 1%">
-        <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Cables.png", :class => 'promo_b'), new_product_path, target: "_blank" %>
+        <#= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Cables.png", :class => 'promo_b'), new_product_path, target: "_blank" %>
     </div>
-</div>
+</div> -->
 
-<div class="row" style="background-color: lavender; padding: 10px; margin: 2%; border-radius: 10px; ">
+<!-- <div class="row" style="background-color: lavender; padding: 10px; margin: 2%; border-radius: 10px; ">
   <div class="col-md-12 center" align="center">
       <h4>Peace Peace Family! Thank you so much for your support. The love given to the platform has been phenomenal. We are expecting minor technical difficulties. As the platform grows we will add many awesome features and extentions. We are constantly working to provide the best experience for all of our users.<br> <strong>Thank you!</strong> </h4>
   </div>
+ -->
 
-</div>
-<hr>
-
-
-<div class="row">
-  <div class="col-md-12 center" align="center">
-    <h3><strong>Recent Products</strong></h3>
+  <div class="row" align="center">
+    <div class="col-md-12" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/STORE+GOLD.png" style="width: 250px; height: 250px" >
+    </div>
   </div>
-</div>
 
+  <div class="row" style="margin-top: 3%;">
+      <div class="form-group">
+          <%= render 'search_form' %>
+      </div>
+  </div>
 
+  <div class="row">
+    <%= form_tag products_path, method: 'get' do %>
+      <div class="col-md-4 form-group">
+          <%= label_tag :category %>
+          <%= select_tag(:category, options_from_collection_for_select(Category.all, :id, :name, params[:category]), { include_blank: true }) %>
+           <%= submit_tag "submit", :name => nil, :class => "btn btn-primary" %>  
+      </div>
+    <% end %>
+  </div>
   
   <div class="row" id="prod_row">
     
-      <div class="col-md-3">
-          <div class="list-group" style="margin-top: 4%">
-            <% @categories.each do |category| %>
-                <%= link_to(category.name, category, :class => "list-group-item") %>
-            <% end %>
-          </div>
-      </div>
 
     <div class="col-md-9" align="center">
         <% @products.each do |product| %>
           <div  id="t_backdrop">
             <!-- <div id="thumbnail_p"> -->
-                <div class="col-md-3" style="margin-top: 2%; height: 100% !important">
-                  <div class="thumbnail" style="height: 80% !important">
+                <div class="col-md-3
+                " style="margin-top: 2%; height: 80% !important">
+                  <div class="thumbnail" style="height: 50% !important">
                   <%= link_to product do %>
                     <div style=" height: 110% !important">
                       <%= image_tag(product.image.url(:thumb), :class => "thumbs", :id => "thumbs") %>
