--- a/app/views/businesses/_search_form.html.erb
+++ b/app/views/businesses/_search_form.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-2" style="margin-left: 4%">
-      <%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub" %>
+      <%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub", style: "background-color: #D4AF37; color: black;" %>
     </div>    
       
     
