--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3 panel panel-default form-style center" align="center" style="background-color: lavender; padding: 10px; border-radius: 10px">
+        <div class="col-md-6 col-md-offset-3 panel panel-default form-style center" align="center" style="  background-color: #D4AF37; color: black; padding: 10px; border-radius: 10px">
             <div class="panel-body">
                 <h2 style="margin-top: 1%"><strong>Please Subscribe</strong> To post your business</h2>
                 <h3 style="margin-top: 1%">This is the final step to give you full access to posting your business </h3> 
@@ -16,7 +16,7 @@
 
           <!--Enter your form contents here-->
 
-          <b style="margin-top: 1%">By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
+          <b style="margin-top: 1%">By signing up, You accept all terms and conditions. </b><br />
           I accept all terms and conditions: <input type="checkbox" value="0" name="agree">
 
           </form>
