--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,35 +1,26 @@
-<div class="row" align="center">
+<!-- <div class="row" align="center">
 	<div class="col-md-12" align="center">
 	  <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/blkbuzservcblkgold.png" style="width: 250px; height: 250px" >
 	</div>
-</div>
+</div> -->
 
 
-<p id="notice"><%= notice %></p>
 
-<div class="row" style="margin-top: 3%;">
-      <div class="form-group">
-          <%= render 'search_form' %>
-      </div>
-</div>
+
+
 
 
 
 
 <div class="row">
-	<div class="col-md-12 center" align="center">
+	<div class="col-md-8 center" align="center">
 		
 		<script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
 		<script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 
-		<div class="usa" id="map"></div>
+		<div class="usa" id="map"></div><br>
 
-	</div>
-</div>
-
-<div class="row" style="margin-top: 3%">
-	<div class="col-md-12 center" align="center">
-			<strong><h5>If map is not showing please press this button. Thank You!</h5></strong>
+		<strong><h5>If map is not showing please press this button. Thank You!</h5></strong>
 			        <div>
 			          <button class="btn" style="background-color: #D4AF37; color: black;" onclick="myFunction()">Reload</button>
 
@@ -39,33 +30,73 @@
 			            }
 			          </script>
 			        </div>
-			<strong><h4>Double Click your state to find business near you!</h4></strong>
+		<strong><h4>Double Click your state to find business near you!</h4></strong>
+
+	</div>
+
+	<div class="col-md-4">
+		<div class="row" style="margin-top: 3%;">
+			<div class="form-group">
+				<h4 style="color: #D4AF37">Search A Business:</h4>	
+				<%= render 'search_form' %>
+			</div>
+		</div>
+
+		<hr style="color: #D4AF37">
+
+		<h4 style="color: #D4AF37">
+			Filter Results:
+		</h4><br>
+
+		<div>
+			<%= form_tag businesses_path, method: 'get' do %>
+				<div class="form-group" style="color: #D4AF37">
+					<%= label_tag :business_category %>
+				  	<%= select_tag(:business_category, options_from_collection_for_select(BusinessCategory.all, :id, :name, params[:business_category]), { include_blank: true }) %>
+					<br>
+					<br>
+					<%= label_tag :state %>
+				  	<%= select_tag(:state, options_from_collection_for_select(State.all, :id, :name, params[:state]), { include_blank: true }) %>
+					<br>
+					<br>
+					<%= submit_tag "submit", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
+				</div>
+
+				     
+			<% end %>
+		</div>
+
+		<hr style="color: #D4AF37">
+
+		<div style="width: 350px; color: #D4AF37;">
+			<h3>Peace Peace Family!</h3>
+			<p style="font-size: 20px">If You would like your business to be posted on The Black Woman Is God Stores please click here: </p>
+
+		
+				<% if user_signed_in? %>
+					<%= link_to 'Add Your Business', new_business_path, class: "btn", style: "background-color: #D4AF37; color: black; margin-bottom: 15px;" %>
+				<% end %>
+	
+
+	
+		</div>
+
 	</div>
 </div>
 
 
+
+
+
+
 <div class="row" style="margin-top: 3%">
 
-		<%= form_tag businesses_path, method: 'get' do %>
-			<div class="col-md-3 form-group" style="color: #D4AF37">
-				<%= label_tag :business_category %>
-			  	<%= select_tag(:business_category, options_from_collection_for_select(BusinessCategory.all, :id, :name, params[:business_category]), { include_blank: true }) %>
-				<br>
-				<br>
-				<%= label_tag :state %>
-			  	<%= select_tag(:state, options_from_collection_for_select(State.all, :id, :name, params[:state]), { include_blank: true }) %>
-				<br>
-				<br>
-				<%= submit_tag "submit", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
-			</div>
 
-			     
-		<% end %>
 		
-		<div class="col-md-9" align="center">
+		<div class="col-md-12" align="center">
 	  	<table class="table">
 			
-	  		<tr>
+	  		<tr style="color: #D4AF37; font-size: 20px" align="center">
 			    <th class="center"></th>
 			    <th class="center">Name</th>
 			    <th class="center">Description</th>
@@ -76,8 +107,8 @@
 			</tr>
 			
 			<% @businesses.each do |business| %>
-
-			<tr class="business_table">
+			<div style="overflow: auto;">
+				<tr class="business_table">
 				<th style="background-color: #D4AF37;">
 					<%= link_to business do %>
 	       				<%= image_tag(business.image.url(:thumb), :class => "thumbs") %>
@@ -111,6 +142,8 @@
 
 						
 			</tr>
+			</div>
+
 
 			<% end %> 
 	  	</table>
@@ -124,19 +157,3 @@
 </div>
 
 
-
-
-
-
-
-
-	
-
-<script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
-<script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
-
-<div class="row">
-  <% if user_signed_in? %>
-	<%= link_to 'Add Your Business', new_business_path %>
-  <% end %>
-</div>
