--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,7 +1,35 @@
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-      </div>
-      <!-- /.container -->
+    <footer class="footer" style="background-color: #D4AF37; height: 300px; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
+
+    	<div class="col-md-6" >
+	    	 <h4>
+	    		Links:
+	    	</h4>
+			<ul align="center">
+				<li><%= link_to "Home", root_path, style: "color: black;" %></li>
+				<li><%= link_to "Store", products_path, style: "color: black;" %></li>
+				<li><%= link_to "Business Services", businesses_path, style: "color: black;" %></li>
+				<li><%= link_to "About Us", pages_about_path, style: "color: black;" %></li>
+				<li><%= link_to "Contact Us", pages_contact_path, style: "color: black;" %></li>
+				
+			</ul>
+
+			<br>
+			<br>
+
+			 Copyright © 2018	
+    	</div>
+
+    	<div class="col-md-6">
+    		<h4>
+    			Contact:
+    		</h4>
+
+    		<ul align="center">
+    			<li><strong>Email:</strong> Theblackwomanisgodstores@gmail.com </li>
+    			<li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+    		</ul>
+    	</div>
+
+
     </footer>
