--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -4,7 +4,7 @@
 			<%= f.search_field :title_or_description_cont, class: "form-control", placeholder: "Search..." %>
 		</div>
 
-		<div class="col-md-2" style="margin-left: 4%">
+		<div  style="margin-left: 4%; margin-right: 1%">
 			<%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub", style: "background-color: #D4AF37; color: black;" %>
 		</div>		
 			
