--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,40 +18,70 @@
   </div>
  -->
 
-  <div class="row" align="center">
+<!--   <div class="row" align="center">
     <div class="col-md-12" align="center">
       <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/STORE+GOLD.png" style="width: 250px; height: 250px" >
     </div>
-  </div>
+  </div> -->
 
-  <div class="row" style="margin-top: 3%;">
-      <div class="form-group">
-          <%= render 'search_form' %>
-      </div>
-  </div>
 
 
   <div class="row" id="prod_row">
-      <div class="col-md-3 form-group" id="catrow" class="dropdown-menu">
-        <%= form_tag products_path, method: 'get' do %>
-            <%= label_tag :category %>
-            <%= select_tag(:category, options_from_collection_for_select(Category.all, :id, :name, params[:category]), { include_blank: true }) %>
-            <br>
-            <br>
-            <%= label_tag :min_price %>
-            <%= text_field_tag :min_price, params[:min_price] %>
-            <br>
-            <br>
-            <%= label_tag :max_price %>
-            <%= text_field_tag :max_price, params[:max_price] %>
-            <br>
-            <br>
-            <%= submit_tag "submit", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
-        <% end %>
+      <div class="col-md-3 form-group" id="catrow" class="dropdown-menu" >
+
+          <div class="row" style="margin-top: 3%;">
+            <h3>Search A Product</h3>
+              <div class="form-group">
+                  <%= render 'search_form' %>
+              </div>
+          </div>
+
+          <hr>
+          <br>
+          <br>
+          <br>
+
+          <h3>
+            Filter Products:
+          </h3>
+
+
+          <%= form_tag products_path, method: 'get' do %>
+              <%= label_tag :category %>
+              <%= select_tag(:category, options_from_collection_for_select(Category.all, :id, :name, params[:category]), { include_blank: true }) %>
+              <br>
+              <br>
+              <%= label_tag :min_price %>
+              <%= text_field_tag :min_price, params[:min_price] %>
+              <br>
+              <br>
+              <%= label_tag :max_price %>
+              <%= text_field_tag :max_price, params[:max_price] %>
+              <br>
+              <br>
+              <%= submit_tag "submit", :name => nil, :class => "btn btn-primary", :style => "background-color: #D4AF37; color: black;" %>  
+          <% end %>
+
+              <hr style="color: #D4AF37">
+
+          <div style="width: 300px; color: #D4AF37;">
+            <h3>Peace Peace Family!</h3>
+            <p style="font-size: 20px">If You would like to sell your products to the The Black Woman Is God Stores community please click here: </p>
+
+          
+              <% if user_signed_in? %>
+                <%= link_to 'Sell Yor Product', new_product_path, class: "btn", style: "background-color: #D4AF37; color: black; margin-bottom: 15px;" %>
+              <% end %>
+        
+
+        
+          </div>
       </div>
+
+
   
 
-    <div class="col-md-9" align="center">
+    <div class="col-md-9" style="padding: 20px; border-left: solid; border-width: 1px;" align="center">
             <% @products.each do |product| %>
 
               <div  id="t_backdrop">
@@ -66,7 +96,7 @@
 
                            
                           <% end %>
-                          <div class="caption"style=" width: 250px; height: 200px; padding: 3%; word-wrap: break-word; color: #D4AF37 !important; font-size: 17px; opacity: 0.85" >
+                          <div class="caption" style=" width: 200px; height: 200px; padding: 3%; word-wrap: break-word; color: #D4AF37 !important; font-size: 17px; opacity: 0.85" >
                             <h4><%= product.title %></h4>
                             <h3><strong><%= number_to_currency(product.price) %></strong></h3>
                             <p><%= link_to product.category.name, category_path(product.category), :style => "color: #D4AF37" %></p>
