--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag subscriber_path(1), method: :put do %>
 
-
+<span style="font-size: 20px"><strong> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</strong></span><br><br>
 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="A monthly Subscription To TBWIG Stores"
@@ -11,5 +11,6 @@
 </script>
 
 
-<span><strong> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</strong></span>
+
+
 <% end %>       
