--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,15 +1,3 @@
-<!-- <div class="row" align="center">
-	<div class="col-md-12" align="center">
-	  <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/blkbuzservcblkgold.png" style="width: 250px; height: 250px" >
-	</div>
-</div> -->
-
-
-
-
-
-
-
 
 
 <div class="row">
@@ -22,7 +10,7 @@
 
 		<strong><h5>If map is not showing please press this button. Thank You!</h5></strong>
 			        <div>
-			          <button class="btn" style="background-color: #D4AF37; color: black;" onclick="myFunction()">Reload</button>
+			          <button class="btn" style="background-color: #D4AF37; color: black;" onclick="myFunction()">Activate Map</button>
 
 			          <script>
 			            function myFunction(){
