--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,8 +1,8 @@
     <!-- Footer -->
-    <footer class="footer" style="background-color: #D4AF37; height: 300px; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
+    <footer class="footer" style="background-color: #D4AF37; height: 320px; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
 
     	<div class="col-md-6" >
-	    	 <h4>
+	    	 <h4 align="center">
 	    		Links:
 	    	</h4>
 			<ul align="center">
@@ -21,7 +21,7 @@
     	</div>
 
     	<div class="col-md-6">
-    		<h4>
+    		<h4 align="center">
     			Contact:
     		</h4>
 
