--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -26,14 +26,15 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: #D4AF37; opacity: 0.85; " ><%= current_user.username %>'s Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "View Profile", user_path(current_user) %></li>
-            <li><a href="https://dashboard.stripe.com/" target="_blank">Manage Sales</a></li>
-            <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+            <li><%= link_to "Manage Sales", sales_path(current_user) %></li>
+            <li><%= link_to "View Purchases", purchases_path(current_user) %></li>
           </ul>
         </li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: #D4AF37; opacity: 0.85; " ><%= current_user.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
+            <li><%= link_to "Edit Account", edit_user_registration_path %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
