--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,9 +1,10 @@
     <!-- Footer -->
     <footer class="footer" style="background-color: #D4AF37; height: 320px; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
 
-    	<div class="col-md-6" >
+    	<div class="row">
+    		    	<div class="col-md-6" >
 	    	 <h4 align="center">
-	    		Links:
+	    		&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  Links:
 	    	</h4>
 			<ul align="center">
 				<li><%= link_to "Home", root_path, style: "color: black;" %></li>
@@ -17,18 +18,26 @@
 			<br>
 			<br>
 
-			 Copyright © 2018	
+
+			 
     	</div>
 
     	<div class="col-md-6">
     		<h4 align="center">
-    			Contact:
+    			&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   Contact:
     		</h4>
 
     		<ul align="center">
     			<li><strong>Email:</strong> Theblackwomanisgodstores@gmail.com </li>
     			<li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
     		</ul>
+    	</div>
+    	</div>
+
+	
+
+    	<div class="row" align="center">
+				<h5>Copyright © 2018</h5>
     	</div>
 
 
