--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -68,7 +68,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit "Complete Order", class: "btn btn-success" %>
+        <%= f.submit "Complete Order", class: "btn btn-success", id: "new_order" %>
       </div>
     <% end %>
   </div>
